RESOLVED FIXED302760
[blocks-in-inline] Fix web-platform-tests/css/css-overflow/line-clamp/webkit-line-clamp-038.html
https://bugs.webkit.org/show_bug.cgi?id=302760
Summary [blocks-in-inline] Fix web-platform-tests/css/css-overflow/line-clamp/webkit-...
alan
Reported 2025-11-18 19:50:24 PST
ssia
Attachments
Patch (15.38 KB, patch)
2025-11-18 19:55 PST, alan
no flags
Patch (17.86 KB, patch)
2025-11-19 09:35 PST, alan
no flags
[fast-cq]Patch (17.86 KB, patch)
2025-11-19 11:55 PST, alan
no flags
alan
Comment 1 2025-11-18 19:55:46 PST
alan
Comment 2 2025-11-19 09:35:20 PST
alan
Comment 3 2025-11-19 11:55:09 PST
Created attachment 477444 [details] [fast-cq]Patch
EWS
Comment 4 2025-11-19 19:06:18 PST
Committed 303301@main (5e7b96346e32): <https://commits.webkit.org/303301@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477444 [details].
Radar WebKit Bug Importer
Comment 5 2025-11-19 19:07:12 PST
Note You need to log in before you can comment on or make changes to this bug.