[blocks-in-inline] Fix web-platform-tests/css/css-overflow/line-clamp/webkit-line-clamp-038.html https://bugs.webkit.org/show_bug.cgi?id=302760

Reviewed by Antti Koivisto.

Propagate line-clamp's line count information between IFC and render tree.

Test: fast/inline/blocks-in-inline-with-legacy-line-clamp.html

* LayoutTests/fast/inline/blocks-in-inline-with-legacy-line-clamp-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-with-legacy-line-clamp.html: Added.
* Source/WebCore/layout/LayoutState.cpp:
(WebCore::Layout::LayoutState::layoutWithFormattingContextForBlockInInline const):
* Source/WebCore/layout/LayoutState.h:
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::createDisplayContentForInlineContent):
* Source/WebCore/layout/formattingContexts/inline/InlineLayoutState.h:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::handleBlockContent):
* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::layoutWithFormattingContextForBlockInInline):
* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.h:
* Source/WebCore/layout/integration/LayoutIntegrationUtils.cpp:
(WebCore::Layout::IntegrationUtils::layoutWithFormattingContextForBlockInInline const):
* Source/WebCore/layout/integration/LayoutIntegrationUtils.h:

Canonical link: https://commits.webkit.org/303301@main